<?php

/**
 * Copyright © OXID eSales AG. All rights reserved.
 * See LICENSE file for license details.
 */

declare(strict_types=1);

namespace OxidEsales\Payments\Stripe\Adapter;

use OxidEsales\Eshop\Application\Model\Basket;

/**
 * Interface for session operations.
 *
 * Sprint 20: Created to remove Registry::getSession() calls from handlers.
 * Allows handlers to be unit tested without triggering OXID container builds.
 *
 * @since 2.0.0
 */
interface SessionAdapterInterface
{
    /**
     * Get the current session ID.
     *
     * @return string Session ID
     */
    public function getSessionId(): string;

    /**
     * Get the current basket from session.
     *
     * @return Basket|null Current basket or null if not set
     */
    public function getBasket(): ?Basket;

    /**
     * Set a session variable.
     *
     * @param string $name Variable name
     * @param mixed $value Variable value
     */
    public function setVariable(string $name, mixed $value): void;

    /**
     * Get a session variable.
     *
     * @param string $name Variable name
     * @return mixed Variable value or null if not set
     */
    public function getVariable(string $name): mixed;
}
